# win-desktop-icon

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yaml
backup-desktop/: Cargo.toml
backup-desktop/src/: main.rs
desktop-icon/: Cargo.toml
desktop-icon/src/: com.rs  desktop.rs  error.rs  lib.rs  persist.rs  utils.rs
desktop-icon/src/desktop/: icon.rs
desktop-tidy-master/: Cargo.toml  build.rs
desktop-tidy-master/res/: icon.rc
desktop-tidy-master/src/: errors.rs  main.rs  model.rs  utils.rs
src/: com.rs  desktop.rs  lib.rs  main.rs  utils.rs
src/desktop/: icon.rs
