[package]
name = "win-desktop-icon"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = { version = "0.1.19", default-features = false, features = ["help"] }
bitcode = "0.6.9"
eyre = "0.6.12"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
