[workspace]
members = ["backup-desktop", "desktop-icon", "desktop-tidy-master"]
default-members = ["backup-desktop"]
resolver = "3"

[workspace.dependencies]
eyre = "0.6.12"
thiserror = "2"

spdlog-rs = { version = "0.5.3", default-features = false, features = [
    "level-debug",
    "release-level-info",
] }

desktop-icon = { path = "./desktop-icon" }

[profile.release]
lto = true
strip = true
panic = "unwind"
codegen-units = 1
opt-level = "s"
