[package]
name = "desktop-icon"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
spdlog-rs = { workspace = true }

bitcode = "0.6.9"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
