[package]
name = "desktop-tidy-master"
version = "0.1.0"
edition = "2024"

[dependencies]
desktop-icon = { workspace = true }
thiserror = { workspace = true }

compio = { version = "0.19.0-rc.2", default-features = false, features = [
    "runtime",
    "time",
] }

winio = { version = "0.12.0-rc.2", features = [
    "compio-compat",
    "win32-dark-mode",
    "winui",
], default-features = false }

[[bin]]
path = "src/main.rs"
name = "DesktopTidyMaster"
