[package]
name = "desktop-tidy-master"
version = "1.0.0"
description = "Desktop icon organizer"
authors = ["mokurin000"]
edition = "2024"

[dependencies]
desktop-icon = { workspace = true }
thiserror = { workspace = true }
spdlog-rs = { workspace = true }

compio = { version = "0.19.0-rc.2", default-features = false, features = [
    "runtime",
    "time",
] }

winio = { version = "0.12.0-rc.2", features = [
    "compio-compat",
    "win32-dark-mode",
    "winui",
], default-features = false }
fastrand = "2.4.1"
crossfire = "3.1.16"

[[bin]]
path = "src/main.rs"
name = "DesktopTidyMaster"

[build-dependencies]
winresource = "0.1.31"
